--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -14,4 +14,5 @@
     nav a { color:white; margin:0 15px; text-decoration:none; }
     main { flex:1; }
     .form-container { max-width:600px; background:white; padding:30px; margin:40px auto; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
-    input, textarea { width:100%; padding:10px; margin:10px 0; border:1px solid #ddd
+    input, textarea { width:100%; padding:10px; margin:10px 0; border:1px solid #ddd}
+  
