--- a/pages/about.html
+++ b/pages/about.html
@@ -22,7 +22,7 @@
   <div class="page-wrapper">
     <header><h1>About Us</h1></header>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="home.html">Home</a>
       <a href="home.html">Dashboard</a>
       <a href="about.html">About</a>
       <a href="contactus.html">Contact</a>
