--- a/pages/home.html
+++ b/pages/home.html
@@ -20,7 +20,7 @@
   <div class="page-wrapper">
     <header><h1>Smart Classroom Portal</h1></header>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="home.html">Home</a>
       <a href="home.html">Dashboard</a>
       <a href="about.html">About</a>
       <a href="contactus.html">Contact</a>
