--- a/pages/home.html
+++ b/pages/home.html
@@ -8,7 +8,7 @@
   <style>
     html, body { height: 100%; margin: 0; padding: 0; font-family: Arial, sans-serif; background:#f5f5f5; }
     .page-wrapper { min-height: calc(100% - 80px); display: flex; flex-direction: column; }
-    header { background:#004aad; color:white; padding:20px; text-align:center; }
+    header { background:black; color:white; padding:20px; text-align:center; }
     nav { background:#003580; padding:10px; text-align:center; }
     nav a { color:white; margin:0 15px; text-decoration:none; font-weight:bold; }
     .hero { background:url('https://images.unsplash.com/photo-1580582932707-520aed937b7b') center/cover; height:350px; display:flex; justify-content:center; align-items:center; color:white; font-size:2.3rem; font-weight:bold; text-shadow:1px 1px 4px #000; }
