--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="page-wrapper">
-    <header><h1>Smart Classroom Portal</h1></header>
+    <header><h1>Smart Classroom Portal yeah yeah</h1></header>
     <nav>
       <a href="home.html">Home</a>
       <a href="home.html">Dashboard</a>
