--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -1,122 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Contact Us</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact Us</title>
 
-<style>
-  :root {
-    --bg: #eef2f3;
-    --text: #111;
-    --card-bg: white;
-    --accent: #9333ea;
-    --nav-bg: #6b21a8;
-  }
+  <style>
+    :root {
+      --bg: #eef2f3;
+      --text: #111;
+      --card-bg: white;
+      --accent: #9333ea;
+      --nav-bg: #6b21a8;
+    }
 
-  .dark {
-    --bg: #1a1a1a;
-    --text: #f1f1f1;
-    --card-bg: #2a2a2a;
-    --nav-bg: #4a1470;
-  }
+    .dark {
+      --bg: #1a1a1a;
+      --text: #f1f1f1;
+      --card-bg: #2a2a2a;
+      --nav-bg: #4a1470;
+    }
 
-  body {
-    margin:0;
-    background:var(--bg);
-    color:var(--text);
-    font-family:Arial;
-    transition:background .3s, color .3s;
-  }
+    body {
+      margin: 0;
+      background: var(--bg);
+      color: var(--text);
+      font-family: Arial, sans-serif;
+      transition: background .3s, color .3s;
+    }
 
-  header {
-    background: var(--accent);
-    color:white;
-    padding:25px;
-    text-align:center;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-  }
+    header {
+      background: var(--accent);
+      color: white;
+      padding: 25px;
+      text-align: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-  nav {
-    background: var(--nav-bg);
-    text-align:center;
-    padding:12px;
-  }
+    nav {
+      background: var(--nav-bg);
+      padding: 12px;
+      text-align: center;
+    }
 
-  nav a {
-    color:white;
-    margin:0 15px;
-    text-decoration:none;
-    font-weight:bold;
-  }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
 
-  .form-container {
-    max-width:600px;
-    background:var(--card-bg);
-    padding:30px;
-    margin:40px auto;
-    border-radius:10px;
-    box-shadow:0 4px 12px rgba(0,0,0,0.1);
-    transition:background .3s;
-  }
+    .form-container {
+      max-width: 600px;
+      background: var(--card-bg);
+      padding: 30px;
+      margin: 40px auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
+    }
 
-  input, textarea {
-    width:100%;
-    padding:12px;
-    margin:10px 0;
-    border-radius:5px;
-    border:1px solid #ccc;
-    font-size:1rem;
-  }
+    input, textarea {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
 
-  button.submit {
-    background:var(--accent);
-    color:white;
-    padding:12px 20px;
-    border:none;
-    border-radius:6px;
-    cursor:pointer;
-    font-weight:bold;
-    width:100%;
-    margin-top:10px;
-    font-size:1rem;
-  }
+    button.submit {
+      background: var(--accent);
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      width: 100%;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: bold;
+      margin-top: 10px;
+    }
 
-  button.submit:hover {
-    opacity:.9;
-  }
+    button.submit:hover {
+      opacity: .9;
+    }
 
-  button.toggle {
-    padding:8px 15px;
-    background:white;
-    border:none;
-    border-radius:5px;
-    cursor:pointer;
-    color:var(--accent);
-    font-weight:bold;
-  }
+    button.toggle {
+      padding: 8px 15px;
+      background: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      color: var(--accent);
+      font-weight: bold;
+    }
 
-  footer {
-    background:#1f2937;
-    color:#d1d5db;
-    text-align:center;
-    padding:20px;
-    margin-top:40px;
-    border-top:4px solid #9333ea;
-  }
-</style>
+    footer {
+      background: #1f2937;
+      color: #d1d5db;
+      padding: 20px;
+      text-align: center;
+      margin-top: 40px;
+      border-top: 4px solid var(--accent);
+    }
+  </style>
 
-<script>
-  function toggleDarkMode() {
-    document.body.classList.toggle("dark");
-    localStorage.setItem("theme", document.body.classList.contains("dark") ? "dark" : "light");
-  }
-  window.onload = () => {
-    if (localStorage.getItem("theme") === "dark") document.body.classList.add("dark");
-  };
-</script>
+  <script>
+    function toggleDarkMode() {
+      document.body.classList.toggle("dark");
+      localStorage.setItem("theme",
+        document.body.classList.contains("dark") ? "dark" : "light"
+      );
+    }
+    window.onload = () => {
+      if (localStorage.getItem("theme") === "dark") {
+        document.body.classList.add("dark");
+      }
+    };
+  </script>
 
 </head>
 <body>
@@ -139,7 +142,7 @@
 
     <input type="text" placeholder="Your Name" required />
     <input type="email" placeholder="Your Email" required />
-    <textarea rows="5" placeholder="Your Message"></textarea>
+    <textarea rows="5" placeholder="Your Message" required></textarea>
 
     <button class="submit">Send Message</button>
   </div>
