--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Classroom Dashboard</title>
+<title>B-Tech Classroom Dashboard</title>
 
 <style>
   :root {
@@ -120,7 +120,7 @@
 </header>
 
 <nav>
-  
+
   <a href="home.html">Dashboard</a>
   <a href="about.html">About</a>
   <a href="contactus.html">Contact</a>
@@ -148,7 +148,7 @@
   </div>
 </main>
 
-<footer>© 2025 Smart Classroom • Built for Learning</footer>
+<footer>© 2025 B-Tech IT Smart Classroom • Built for Learning</footer>
 
 </body>
 </html>
