--- a/pages/home.html
+++ b/pages/home.html
@@ -120,30 +120,42 @@
 </header>
 
 <nav>
-
-  <a href="home.html">Dashboard</a>
-  <a href="about.html">About</a>
-  <a href="contactus.html">Contact</a>
+  <a href="#courses">Courses</a>
+  <a href="#announcements">Announcements</a>
+  <a href="#assignments">Assignments</a>
 </nav>
 
 <main>
   <div class="grid">
-    <div class="card">
+    <div class="card" id="courses">
+      <img src="https://images.unsplash.com/photo-1581090700227-4c4f7c5f3d3d" />
+      <h3>Courses</h3>
+      <p>Browse available subjects and enroll in your classes.</p>
+      <ul>
+        <li>Mathematics 101</li>
+        <li>Science Basics</li>
+        <li>Computer Fundamentals</li>
+      </ul>
+    </div>
+
+    <div class="card" id="announcements">
       <img src="https://images.unsplash.com/photo-1523580846011-d3a5bc25702b" />
       <h3>Announcements</h3>
-      <p>View important classroom updates and schedules in real time.</p>
+      <p>Stay updated with important classroom news.</p>
+      <ul>
+        <li><strong>Dec 10:</strong> Midterm exams next week.</li>
+        <li><strong>Dec 12:</strong> Guest lecture on Climate Change.</li>
+      </ul>
     </div>
 
-    <div class="card">
+    <div class="card" id="assignments">
       <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c" />
-      <h3>Resources</h3>
-      <p>Access learning materials, assignments, and digital notes.</p>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b" />
-      <h3>Smart Tools</h3>
-      <p>Monitor energy usage, classroom conditions, and automation tools.</p>
+      <h3>Assignments</h3>
+      <p>Track homework and project deadlines.</p>
+      <ul>
+        <li>Math Homework: Chapter 3 problems (Due Dec 15)</li>
+        <li>Science Project: Renewable Energy poster (Due Dec 20)</li>
+      </ul>
     </div>
   </div>
 </main>
