--- a/pages/home.html
+++ b/pages/home.html
@@ -115,7 +115,7 @@
 <body>
 
 <header>
-  <h1>IT Classroom Dashboard</h1>
+  <h1>Classroom Dashboard</h1>
   <button class="toggle" onclick="toggleDarkMode()">🌙 Dark</button>
 </header>
 
@@ -127,48 +127,40 @@
 
 <main>
   <div class="grid">
-    <!-- Courses -->
     <div class="card" id="courses">
       <img src="https://images.unsplash.com/photo-1581090700227-4c4f7c5f3d3d" />
-      <h3>IT Courses</h3>
-      <p>Explore technology-driven subjects and skill-building modules.</p>
+      <h3>Courses</h3>
+      <p>Browse available subjects and enroll in your classes.</p>
       <ul>
-        <li>Web Development (HTML, CSS, JavaScript)</li>
-        <li>Database Systems (SQL & NoSQL)</li>
-        <li>Networking Fundamentals</li>
-        <li>Cybersecurity Basics</li>
-        <li>Cloud Computing (AWS, Azure)</li>
+        <li>Mathematics 101</li>
+        <li>Science Basics</li>
+        <li>Computer Fundamentals</li>
       </ul>
     </div>
 
-    <!-- Announcements -->
     <div class="card" id="announcements">
       <img src="https://images.unsplash.com/photo-1523580846011-d3a5bc25702b" />
       <h3>Announcements</h3>
-      <p>Stay updated with IT-related events and news.</p>
+      <p>Stay updated with important classroom news.</p>
       <ul>
-        <li><strong>Dec 15:</strong> Hackathon registration opens.</li>
-        <li><strong>Dec 18:</strong> Guest lecture on Artificial Intelligence.</li>
-        <li><strong>Dec 20:</strong> Cloud Computing workshop.</li>
+        <li><strong>Dec 10:</strong> Midterm exams next week.</li>
+        <li><strong>Dec 12:</strong> Guest lecture on Climate Change.</li>
       </ul>
     </div>
 
-    <!-- Assignments -->
     <div class="card" id="assignments">
       <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c" />
       <h3>Assignments</h3>
-      <p>Track IT homework and project deadlines.</p>
+      <p>Track homework and project deadlines.</p>
       <ul>
-        <li>Web Dev Project: Build a personal portfolio site (Due Dec 16)</li>
-        <li>Database Assignment: Design ER diagram for e-commerce (Due Dec 19)</li>
-        <li>Networking Lab: Configure a router & subnet (Due Dec 22)</li>
-        <li>Cybersecurity Report: Analyze phishing attacks (Due Dec 25)</li>
+        <li>Math Homework: Chapter 3 problems (Due Dec 15)</li>
+        <li>Science Project: Renewable Energy poster (Due Dec 20)</li>
       </ul>
     </div>
   </div>
 </main>
 
-<footer>© 2025 B-Tech ITSmart Classroom • Empowering Future Tech Leaders</footer>
+<footer>© 2025 B-Tech ITSmart Classroom • Built for Learning</footer>
 
 </body>
 </html>
